fix link not visible

--- a/src/styles/Printer.css
+++ b/src/styles/Printer.css
@@ -34,7 +34,7 @@
 
 .pt_link_wrapper {
     width: 80vw;
-    background-color: rgba(205, 205, 205, 0.3);
+    background-color: rgba(0, 0, 0, 0.098);
     padding: 20px 40px;
     border-radius: 15px;
     margin-bottom: 20px;
